<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn8" />

</LinearLayout>